--- a/reference_card/emergentreference.tex
+++ b/reference_card/emergentreference.tex
@@ -68,7 +68,6 @@ throughout emergent. The first line of each top-level section lists
 which of these work there. On OSX you can swap the Cmd and Ctrl keys
 and Cmd+V is paste while Ctrl+V is Page Down. \\
 \begin{tabular}{@{}ll@{}}
-\\
 \verb!Tab/Shift+Tab! & Forward/Backwards through elements/interface \\
 \verb!Page Up/Down!    & Move cursor to the top/bottom or first/last element\\
 \verb!Ctrl+Space!    & Enable select as you navigate mode. \\
@@ -88,6 +87,7 @@ and Cmd+V is paste while Ctrl+V is Page Down. \\
 \section{Global project}
 \begin{tabular}{@{}ll@{}}
 \verb!Standard!    & Tab \\
+\verb!Init,Run,Step,Stop,Abort!    & F8,F9,F10,F11,F12 (control panels) \\
 \verb!Ctrl+S!    & Save project. \\
 \verb!Ctrl+left! & Backwards in navigation history \\
 \verb!Ctrl+right! & Forwards in navigation history \\
@@ -97,8 +97,8 @@ and Cmd+V is paste while Ctrl+V is Page Down. \\
 \end{tabular}
 
 \section{Project tree and program tree}
-\settowidth{\MyLen}{\texttt{multicol} }
-\begin{tabular}{@{}ll@{}} \\
+\settowidth{\MyLen}{\texttt{multicol}}
+\begin{tabular}{@{}ll@{}}
 \includegraphics[width=91px]{treebrowser.png}   & \includegraphics[width=150px]{programcode.png}
 \end{tabular}
 \begin{tabular}{@{}ll@{}}
@@ -160,7 +160,7 @@ These sequences insert new items. Press Ctrl+left,left afterwards to navigate ba
 \begin{tabular}{@{}ll@{}}
 \verb!Standard!  & Tab,Page,Ctrl+F/B/N/P/A/E/X/W/C/V/Y. \\
 \verb!F1!  & Help Browser. \\
-\verb!Ctrl+S!  & Toggle Search/Find focus. \\
+\verb!Ctrl+S!  & Toggle Search/Find focus.
 \end{tabular}
 
 \section{DataTables and matrices}
